force-app/main/default/objects/vr__VR_Email_History_Contact__c/vr__VR_Email_History_Contact__c.object-meta.xml
<CustomObject>
    <description>VerticalResponse email campaign statistics for salesforce.com Contacts</description>
    <label>VR Email History Contact</label>
    <nameField>
        <label>Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VR Email History Contact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>