force-app/main/default/objects/vr__VR_Email_History_Contact__c/fields/vr__Clicked__c.field-meta.xml
<CustomField>
    <fullName>vr__Clicked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Clicked indicates that the recipient clicked on at least one link within the email</description>
    <label>Clicked</label>
    <type>Checkbox</type>
</CustomField>