force-app/main/default/objects/vr__VR_Email_History_Contact__c/fields/vr__Clicked_Links__c.field-meta.xml
<CustomField>
    <fullName>vr__Clicked_Links__c</fullName>
    <description>The specific links that were clicked will be noted in this section</description>
    <label>Clicked Links</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>