force-app/main/default/objects/vr__VR_Email_History_Contact__c/fields/vr__Contact__c.field-meta.xml
<CustomField>
    <fullName>vr__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Corresponds to the salesforce.com Contact who was sent a VerticalResponse email</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>VR Email History Contact</relationshipLabel>
    <relationshipName>VR_Email_History_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>