force-app/main/default/objects/vr__VR_Email_History_Contact__c/fields/vr__Mail_Date__c.field-meta.xml
<CustomField>
    <fullName>vr__Mail_Date__c</fullName>
    <description>This is the date and time the email campaign was launched</description>
    <label>Mail Date</label>
    <type>DateTime</type>
</CustomField>