force-app/main/default/objects/vr__VR_Email_History_Contact__c/fields/vr__Sent__c.field-meta.xml
<CustomField>
    <fullName>vr__Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sent indicates the recipient was included on the mailing list at the time of launch</description>
    <label>Sent</label>
    <type>Checkbox</type>
</CustomField>