force-app/main/default/objects/vr__VR_Email_History_Contact__c/fields/vr__Unsubscribed__c.field-meta.xml
<CustomField>
    <fullName>vr__Unsubscribed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unsubscribed indicates the recipient opted-out of the email campaign</description>
    <label>Unsubscribed</label>
    <type>Checkbox</type>
</CustomField>